--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 </header>
 
 <main>
-    <p>Welcome to DQ Coffee! Discover our delightful menu and enjoy a cozy atmosphere.</p>
+    <p>Welcome to DQ Coffee !!! Discover our delightful menu and enjoy a cozy atmosphere.</p>
 <!--     <p><a href="modern_menu_DQE_1_compressed.pdf">Click Here for our MENU</a></p> -->
-    <p>or check out the menu below</p>
+    <p>check out the menu below</p>
   </main>
   
 <main>
